--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -1,13 +1,11 @@
 
 .main-container{
-    background: lime;
     height: 100vh;
     position: relative;
     display: flex;
 
     .c-login{
         position: absolute;
-        background: red;
         width: 90%;
         max-width: 450px;
         left: 50%;
@@ -16,16 +14,42 @@
 
         form{
             text-align: center;
+
             img{
-                background: purple;
                 width: 50px;
                 height: 50px;
                 border-radius: 50%;
             }
+
+            .mdl-textfield__input{
+                border-bottom: 1px solid rgba(63,81,181, 1)!important;
+                color: rgb(63,81,181);
+            }
+            .mdl-textfield.is-invalid .mdl-textfield__input{
+                border-color: rgba(63,81,181, 0.5)!important;
+            }
+            .mdl-textfield--floating-label.is-invalid .mdl-textfield__label{
+                color: rgba(63,81,181, 1);
+                font-size: 16px;
+            }
+            .mdl-textfield.is-invalid .mdl-textfield__label:after{
+                background-color: rgba(63,81,181, 1)!important;
+            }
             button{
                 width: 90%;
-                height: 30px;
-                border-radius: 50px;
+                height: 40px;
+                border-radius: 5px;
+                margin-top: 20px;
+                outline: 0px;
+                color: rgba(63,81,181, 1);
+                border: 1px solid rgba(63,81,181, 1);
+                background: transparent;
+
+                &:hover{
+                    background:  rgba(63,81,181, 1);
+                    color: #fff;
+                    transition: all 300ms ease-in-out;
+                }
             }
         }
     }
