--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,23 +1,28 @@
+body {
+  background: #E7ECED; }
+
 .main-container {
-  height: 100vh;
-  position: relative;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
   .main-container .c-login {
-    position: absolute;
     width: 90%;
     max-width: 450px;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 auto; }
     .main-container .c-login form {
       text-align: center; }
       .main-container .c-login form img {
-        width: 50px;
-        height: 50px;
+        width: 120px;
+        height: 120px;
         border-radius: 50%; }
       .main-container .c-login form .mdl-textfield__input {
         border-bottom: 1px solid #3f51b5 !important;
@@ -44,3 +49,13 @@
           -webkit-transition: all 300ms ease-in-out;
           -o-transition: all 300ms ease-in-out;
           transition: all 300ms ease-in-out; }
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  padding: 10px 0px;
+  text-align: right; }
+  footer p {
+    color: #3f51b5;
+    padding: 0px 50px; }
