--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -1,23 +1,24 @@
-
+body{
+    background: #E7ECED;
+}
 .main-container{
-    height: 100vh;
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     display: flex;
-
+    align-items: center;
     .c-login{
-        position: absolute;
         width: 90%;
         max-width: 450px;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        display: flex;
+        margin: 0 auto;
 
         form{
             text-align: center;
 
             img{
-                width: 50px;
-                height: 50px;
+                width: 120px;
+                height: 120px;
                 border-radius: 50%;
             }
 
@@ -52,5 +53,17 @@
                 }
             }
         }
+    }
+}
+footer{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    padding: 10px 0px;
+    text-align: right;
+
+    p{
+        color: rgba(63,81,181, 1);
+        padding: 0px 50px;
     }
 }
