--- a/assets/scss/__config.scss
+++ b/assets/scss/__config.scss
@@ -1,3 +1,16 @@
+@font-face{
+    font-family: 'Mukta-Bold';
+    src: url(../fonts/Mukta-Bold.ttf);
+}
+@font-face{
+    font-family: 'Mukta-Light';
+    src: url(../fonts/Mukta-Light.ttf);
+}
+@font-face{
+    font-family: 'Mukta-Regular';
+    src: url(../fonts/Mukta-Regular.ttf);
+}
+
 html,
 body{
     margin: 0;
