--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -1,24 +1,63 @@
 header{
-    background: rgba(63,81,181, 1);
+    background: #008E5A;
+    display: flex;
+    align-items: center;
+    position: relative;
     .c-title{
-        padding: 0px 30px;
-        background: purple;
+        padding: 10px 30px;
+        line-height: 20px;
+
         span{
             color: #fff;
-            font-family: 'Mukta-Regular';
+            font-family: 'Mukta-Bold';
             font-size: 25px;
         }
     }
     .c-info-user{
-        background: indianred;
+        position: absolute;
+        right: 20px;;
+        span{
+            font-family: 'Mukta-Regular';
+            font-size: 17px;
+            color: #fff;
+            padding: 0px 20px;
+        }
+        a{
+            text-decoration: none;
+            color: #fff;
+            font-family: 'Mukta-Regular';
+            font-size: 15px;
+            border: solid 1px #fff;
+            border-radius: 5px;
+            padding: 3px 10px;
+            
+            &:hover{
+                background: #fff;
+                color: #008E5A;
+                transition: all 500ms ease;
+            }
+        }
     }
+}
+
+
+// Estilos para la sección del ASIDE
+aside, main{
+    display: inline-flex;
 }
 aside{
     background: red;
+    width: 25%;
 }
+
+// Estilos para la sección del DASHBOARD principal
 main{
     background: paleturquoise;
+    width: 74%;
 }
+
+// Estilos para la sección del FOOTER
+
 footer{
     background: gold;
 }
