--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -3,6 +3,7 @@ header{
     display: flex;
     align-items: center;
     position: relative;
+    padding: 10px 0px;
     .c-title{
         padding: 10px 30px;
         line-height: 20px;
@@ -46,14 +47,46 @@ aside, main{
     display: inline-flex;
 }
 aside{
-    background: red;
+    background: rgb(0, 124, 79);
     width: 25%;
+    position: relative;
+    height: -webkit-fill-available;    
+    .c-title{
+        width: 100%;
+        position: absolute;
+        color: #fff;
+        font-size: 20px;
+        font-family: 'Mukta-Regular';
+        padding: 10px 0px;
+        text-align: center;
+    }
+    .c-listas{
+        width: 100%;
+        margin: 70px 0px;
+        ul{
+            li{
+                list-style: none;
+                width: 90%;
+                margin: 5px auto;
+                a{
+                    text-decoration: none;
+                    color: #fff;
+                    font-size: 15px;
+                    font-family: 'Mukta-Regular';
+                    &:hover{
+                        color: rgb(157, 233, 205);
+                    }
+                }
+            }
+        }
+    }
 }
 
 // Estilos para la sección del DASHBOARD principal
 main{
-    background: paleturquoise;
+    background: #fff;
     width: 74%;
+    position: absolute;
 }
 
 // Estilos para la sección del FOOTER
