--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -239,6 +239,17 @@ main {
 			}
 		}
 	}
+	.agregar-consumible{
+		background: red;
+		.c-main-form{
+			background: lime;
+			form{
+				.c-input-group{
+					background: purple;
+				}
+			}
+		}
+	}
 }
 
 // Estilos para la sección del FOOTER
