--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -182,13 +182,15 @@ main {
 								display: flex;
 								justify-content: center;
 
-								a {
-									padding: 5px 15px;
+								a, button {
+									padding: 5px 10px;
 									margin: 0px 5px;
 									color: #fff;
 									font-size: 15px;
 									border-radius: 5px;
+									border: none;
 								}
+								
 
 								.btn-info {
 									background: #065FD4;
